@@ -80,7 +80,6 @@ import org.apache.hadoop.yarn.server.nodemanager.containermanager.container.Cont
 import org.apache.hadoop.yarn.server.nodemanager.containermanager.localizer.ContainerLocalizer;
 import org.apache.hadoop.yarn.server.nodemanager.containermanager.localizer.ResourceLocalizationService;
 import org.apache.hadoop.yarn.server.nodemanager.security.NMContainerTokenSecretManager;
-import org.apache.hadoop.yarn.server.security.ApplicationACLsManager;
 import org.apache.hadoop.yarn.server.utils.BuilderUtils;
 import org.apache.hadoop.yarn.util.ConverterUtils;
 import org.junit.Assert;
@@ -116,7 +115,7 @@ public class TestContainerManager extends BaseContainerManagerTest {
   protected ContainerManagerImpl
       createContainerManager(DeletionService delSrvc) {
     return new ContainerManagerImpl(context, exec, delSrvc, nodeStatusUpdater,
-      metrics, new ApplicationACLsManager(conf), dirsHandler) {
+      metrics, dirsHandler) {
       @Override
       public void
           setBlockNewContainerRequests(boolean blockNewContainerRequests) {
@@ -801,7 +800,7 @@ public class TestContainerManager extends BaseContainerManagerTest {
   public void testNullTokens() throws Exception {
     ContainerManagerImpl cMgrImpl =
         new ContainerManagerImpl(context, exec, delSrvc, nodeStatusUpdater,
-        metrics, new ApplicationACLsManager(conf), dirsHandler);
+        metrics, dirsHandler);
     String strExceptionMsg = "";
     try {
       cMgrImpl.authorizeStartRequest(null, new ContainerTokenIdentifier());
