@@ -394,8 +394,7 @@ public class TestContainerManagerRecovery {
 
     return new ContainerManagerImpl(context,
         mock(ContainerExecutor.class), mock(DeletionService.class),
-        mock(NodeStatusUpdater.class), metrics,
-        context.getApplicationACLsManager(), null) {
+        mock(NodeStatusUpdater.class), metrics, null) {
           @Override
           protected LogHandler createLogHandler(Configuration conf,
               Context context, DeletionService deletionService) {
